@@ -87,7 +87,6 @@ SOURCE_TOOLTIPS=YES
 USE_HTAGS=NO
 VERBATIM_HEADERS=NO
 ALPHABETICAL_INDEX=NO
-COLS_IN_ALPHA_INDEX=5
 GENERATE_HTML=YES
 HTML_OUTPUT=html
 HTML_FILE_EXTENSION=.html
@@ -133,7 +132,6 @@ SKIP_FUNCTION_MACROS=YES
 ALLEXTERNALS=NO
 EXTERNAL_GROUPS=YES
 EXTERNAL_PAGES=YES
-PERL_PATH=/usr/bin/perl
 CLASS_DIAGRAMS=YES
 HIDE_UNDOC_RELATIONS=YES
 HAVE_DOT=YES
