@@ -1,4 +1,6 @@
 0.5.0
+Code clean.
+Fixed doxyfile.
 Fixed header sysntax hiliting.
 Done barber pole dialog.
 Done external editrors.
